On click of comment author image/name - redirect to user profile

--- a/SocialNetwork/SocialNetwork/styles/wall-style.css
+++ b/SocialNetwork/SocialNetwork/styles/wall-style.css
@@ -336,6 +336,10 @@
                 vertical-align: top;
             }
 
+                .post-comments li .post-comment .comment-author-image:hover {
+                    cursor: pointer;
+                }
+
             .post-comments li .post-comment .comment-author-info {
                 display: inline-block;
             }
