--- a/SocialNetwork/SocialNetwork/views/friend-friends-view.html
+++ b/SocialNetwork/SocialNetwork/views/friend-friends-view.html
@@ -1,4 +1,5 @@
-﻿<div class="container col-xs-11">
+﻿<link href="../styles/user-friends-style.css" rel="stylesheet" />
+<div class="container col-xs-11">
     <div ng-include src="'../views/heading.html'"></div>
     <div class="viewTitle col-xs-12 clearfix">
         <h2>
@@ -6,7 +7,7 @@
         </h2>
     </div>
     <div id="friend-all-friends" class="col-lg-6 col-md-8 col-sm-10 col-xs-12">
-        <ul class="col-xs-12" id="-friend-friends-list">
+        <ul class="col-xs-12" id="friend-friends-list">
             <li class="col-sm-6 col-xs-12" ng-repeat="friend in userFriends">
                 <div ng-if="friend.profileImageData != null" class="col-sm-4 col-xs-5 all-friends-image">
                     <img ng-src="{{ friend.profileImageData }}" />
