--- a/SocialNetwork/SocialNetwork/views/friend-friends-view.html
+++ b/SocialNetwork/SocialNetwork/views/friend-friends-view.html
@@ -7,8 +7,12 @@
         </h2>
     </div>
     <div id="friend-all-friends" class="col-lg-6 col-md-8 col-sm-10 col-xs-12">
+        <div class="col-xs-12">
+            <label id="user-filter-label" class="col-lg-8 col-md-7 col-sm-5 col-xs-12" for="user-filter-name">Name filter: </label>
+            <input ng-model="filterName" class="col-lg-4 col-md-5 col-sm-7 col-xs-12" type="text" id="user-filter-name" />
+        </div>
         <ul class="col-xs-12" id="friend-friends-list">
-            <li class="col-sm-6 col-xs-12" ng-repeat="friend in userFriends">
+            <li class="col-sm-6 col-xs-12" ng-repeat="friend in userFriends | filter:filterName">
                 <div ng-if="friend.profileImageData != null" class="col-sm-4 col-xs-5 all-friends-image">
                     <img ng-src="{{ friend.profileImageData }}" />
                 </div>
