--- a/SocialNetwork/SocialNetwork/views/header.html
+++ b/SocialNetwork/SocialNetwork/views/header.html
@@ -1,5 +1,5 @@
 ﻿<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-<link href="../styles/style-for-header.css" rel="stylesheet" />
+<link href="../styles/style-header.css" rel="stylesheet" />
 <div class="header col-xs-12" ng-controller="HeaderController">
     <div id="inner">
         <div id="navigation" class="col-sm-8 col-xs-12">
@@ -9,7 +9,7 @@
             <div class="image" ng-if="me.profileImageData == null">
                 <img src="../images/no-image.png" />
             </div>
-            <div id="logged-user-name"><a href="">{{ me.username }}</a></div>
+            <div id="logged-user-name"><a href="">{{ me.name }}</a></div>
             <ul id="menu">
                 <li ng-click="opendNewsFeed()">
                     <span class="fa fa-comments">
