--- a/SocialNetwork/SocialNetwork/views/edit-profile.html
+++ b/SocialNetwork/SocialNetwork/views/edit-profile.html
@@ -6,11 +6,11 @@
     </div>
     <form class="col-xs-10 col-centered clearfix" ng-submit="saveChanges()">
         <div id="image" class="col-md-4 col-xs-12 clearfix">
-            <div class="profile-image col-lg-12" ng-if="profilImage">
-                <img ng-src="{{ profileImageData }}" />
+            <div class="profile-image col-lg-12" ng-if="me.profileImageData != null">
+                <img ng-src="{{ me.profileImageData }}" />
             </div>
-            <div class="profile-image col-xs-12" ng-if="!profilImage">
-                <img src="../images/no-image.png"/>
+            <div class="profile-image col-xs-12" ng-if="me.profileImageData == null">
+                <img src="../images/no-image.png" />
             </div>
             <div class="caption">
                 <p>Allowed format: .jpg</p>
@@ -21,10 +21,10 @@
         </div>
         <div id="other-info" class="col-md-7 col-xs-12">
             <label for="editName" class="col-md-4 col-xs-12">Name</label>
-            <input class="col-md-8 col-xs-12" type="text" name="editName" ng-model="name" />
+            <input class="col-md-8 col-xs-12" type="text" name="editName" ng-model="me.name" />
 
             <label for="editEmail" class="col-md-4 col-xs-12">Email</label>
-            <input class="col-md-8 col-xs-12" type="email" name="editEmail" ng-model="email" />
+            <input class="col-md-8 col-xs-12" type="email" name="editEmail" ng-model="me.email" />
 
             <label class="col-md-4 col-xs-12">Gender</label>
             <div id="radio-btns" class="col-md-8 col-xs-12">
@@ -33,15 +33,15 @@
                 <input value="other" ng-checked="other" name="registerGender" type="radio" ng-model="gender" /> Other
             </div>
 
-            <input onchange="angular.element(this).scope().uploadBackgroundImage(this)" type="file" id="select-bg-image" />
+            <input onchange="angular.element(this).scope().uploadBackgroundImage(this)" type="file" id="select-bg-image" accept="image/jpg" />
             <div class="upload clearfix col-sm-4 col-xs-12">
                 <button ng-click="clickUploadBackgroundImage()" type="button">Upload</button>
                 <p class="caption">Limit: 1024kb</p>
             </div>
-            <div class="background-image col-sm-8 col-xs-12" ng-if="coverImage">
-                <img ng-src="{{ coverImageData }}"/>
+            <div class="background-image col-sm-8 col-xs-12" ng-if="me.coverImageData != null">
+                <img ng-src="{{ me.coverImageData }}"/>
             </div>
-            <div class="background-image col-sm-8 col-xs-12" ng-if="!coverImage">
+            <div class="background-image col-sm-8 col-xs-12" ng-if="me.coverImageData == null">
                 <img src="../images/no-bg-image.jpg"/>
             </div>
         </div>
