--- a/SocialNetwork/SocialNetwork/views/home-page.html
+++ b/SocialNetwork/SocialNetwork/views/home-page.html
@@ -1,4 +1,4 @@
-﻿<link href="../styles/home-style.css" rel="stylesheet"/>
+﻿<link href="../styles/home-page-style.css" rel="stylesheet"/>
 <div class="container col-xs-11">
     <div ng-include src="'../views/header.html'"></div>
     <div class="viewTitle col-xs-12 clearfix">
@@ -11,14 +11,14 @@
             <li class="col-xs-12 news-feed-post" ng-repeat="post in newsFeedPosts">
                 <div class="post" ng-init="checkPostCommentsCount(post)">
                     <div class="post-user-data">
-                        <div ng-if="post.author.profileImageData != null" class="post-user-image">
+                        <div ng-click="openSelectedUserProfile(post.author.username)" ng-if="post.author.profileImageData != null" class="post-user-image">
                             <img ng-src="{{ post.author.profileImageData }}" />
                         </div>
-                        <div ng-if="post.author.profileImageData == null" class="post-user-image">
+                        <div ng-click="openSelectedUserProfile(post.author.username)" ng-if="post.author.profileImageData == null" class="post-user-image">
                             <img src="../images/no-image.png" />
                         </div>
                         <div class="post-info">
-                            <p ng-mouseenter="showPopUp=true" ng-mouseleave="showPopUp=false" class="post-author-name">{{ post.author.name }}</p>
+                            <p ng-click="openSelectedUserProfile(post.author.username)" ng-mouseenter="showPopUp=true" ng-mouseleave="showPopUp=false" class="post-author-name">{{ post.author.name }}</p>
                             <p class="post-date">{{ post.date | date : 'd MMM yyyy HH:mm:ss' : '+03' }}</p>
                             <input ng-click="$parent.deleteMode=true" class="edit-delete-post" ng-if="(post.author.username == myUsername || post.wallOwner.username == myUsername) && !deleteMode && !editMode" type="button" value="Delete"/>
                             <input ng-click="$parent.editMode=true; $parent.postText=post.postContent" class="edit-delete-post" ng-if="post.author.username == myUsername && !deleteMode && !editMode" type="button" value="Edit"/>
@@ -87,14 +87,14 @@
                     <ul class="col-xs-12 post-comments">
                         <li class="col-xs-12" ng-repeat="comment in post.comments">
                             <div ng-init="getCommentAuthor(comment)" class="post-comment">
-                                <div ng-if="comment.author.profileImageData != null" class="comment-author-image">
+                                <div ng-click="openSelectedUserProfile(comment.author.username)" ng-if="comment.author.profileImageData != null" class="comment-author-image">
                                     <img ng-src="{{ comment.author.profileImageData }}" />
                                 </div>
-                                <div ng-if="comment.author.profileImageData == null" class="comment-author-image">
+                                <div ng-click="openSelectedUserProfile(comment.author.username)" ng-if="comment.author.profileImageData == null" class="comment-author-image">
                                     <img src="../images/no-image.png" />
                                 </div>
                                 <div class="comment-author-info">
-                                    <span ng-mouseenter="showCommentPopUp=true" ng-mouseleave="showCommentPopUp=false" class="comment-author-name">{{ comment.author.name }}</span>
+                                    <span ng-click="openSelectedUserProfile(comment.author.username)" ng-mouseenter="showCommentPopUp=true" ng-mouseleave="showCommentPopUp=false" class="comment-author-name">{{ comment.author.name }}</span>
                                     <span class="comment-date">{{ comment.date | date : 'd MMM yyyy HH:mm:ss' : '+03' }}</span>
                                     <div class="edit-delete-comment-btns">
                                         <input ng-click="$parent.commentDeleteMode=true" class="edit-delete-comment" ng-if="(post.author.username == myUsername || comment.author.username == myUsername) && !commentDeleteMode && !commentEditMode" type="button" value="Delete" />
