Renamed header.html to header-view.html

--- a/SocialNetwork/SocialNetwork/views/friends-view.html
+++ b/SocialNetwork/SocialNetwork/views/friends-view.html
@@ -1,6 +1,6 @@
 ﻿<link href="../styles/style-friends.css" rel="stylesheet" />
 <div class="container col-xs-11">
-    <div ng-include src="'../views/header.html'"></div>
+    <div ng-include src="'../views/header-view.html'"></div>
     <div class="viewTitle col-xs-12 clearfix">
         <h2>
             {{ name }} - Friends({{ numberOfFriends }} total)
