--- a/SocialNetwork/SocialNetwork/views/home-page.html
+++ b/SocialNetwork/SocialNetwork/views/home-page.html
@@ -1,6 +1,6 @@
 ﻿<link href="../styles/home-page-style.css" rel="stylesheet"/>
 <div class="container col-xs-11">
-    <div ng-include src="'../views/header.html'"></div>
+    <div ng-include src="'../views/header-view.html'"></div>
     <div class="viewTitle col-xs-12 clearfix">
         <h2>
             News Feed <span id="news-feed-icon" class="fa fa-comments"></span>
