Renamed style-header.css to header-style.css

--- a/SocialNetwork/SocialNetwork/views/header-view.html
+++ b/SocialNetwork/SocialNetwork/views/header-view.html
@@ -1,5 +1,5 @@
 ﻿<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-<link href="../styles/style-header.css" rel="stylesheet" />
+<link href="../styles/header-style.css" rel="stylesheet" />
 <div class="header col-xs-12" ng-controller="HeaderController">
     <div id="inner">
         <div id="navigation" class="col-sm-8 col-xs-12">
