--- a/SocialNetwork/SocialNetwork/views/edit-profile-view.html
+++ b/SocialNetwork/SocialNetwork/views/edit-profile-view.html
@@ -1,4 +1,4 @@
-﻿<link href="../styles/edit-style.css" rel="stylesheet" />
+﻿<link href="../styles/edit-profile-style.css" rel="stylesheet" />
 <div class="container col-xs-11" ng-cloak="">
     <div ng-include src="'../views/header-view.html'"></div>
     <div class="viewTitle col-xs-12">
