--- a/SocialNetwork/SocialNetwork/views/user-profile-view.html
+++ b/SocialNetwork/SocialNetwork/views/user-profile-view.html
@@ -152,7 +152,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div ng-if="comment.author.isFriend == true || comment.wallOwner.isFriend == true || comment.author.username == me.username || comment.wallOwner.username == me.username" class="comment-buttons">
+                                <div ng-if="post.author.isFriend == true || post.wallOwner.isFriend == true || post.author.username == me.username || post.wallOwner.username == me.username" class="comment-buttons">
                                     <span class="like-comment" ng-if="!comment.liked">{{ comment.likesCount }} <img src="../images/like_icon.png" /></span>
                                     <span ng-click="likePostComment(post, comment)" ng-if="!comment.liked" class="like-unlike-comment">Like</span>
                                     <span class="like-comment" ng-if="comment.liked">{{ comment.likesCount }} <img src="../images/unlike_icon.png" /></span>
